取消第三方登入控件

--- a/YuWaShop/Login/ForgetPassWord/YWForgetPassWordViewController.xib
+++ b/YuWaShop/Login/ForgetPassWord/YWForgetPassWordViewController.xib
@@ -108,37 +108,12 @@
                     </connections>
                 </textField>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="account" translatesAutoresizingMaskIntoConstraints="NO" id="zkz-KX-NPa">
-                    <rect key="frame" x="129" y="145" width="16" height="16"/>
+                    <rect key="frame" x="129" y="144" width="16" height="18"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="16" id="OpA-5k-IEy"/>
+                        <constraint firstAttribute="height" constant="18" id="ZKt-oU-CZx"/>
+                    </constraints>
                 </imageView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C6t-zz-a3Q">
-                    <rect key="frame" x="0.0" y="397" width="375" height="1"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="1" id="oGk-p2-Fyc"/>
-                    </constraints>
-                </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="upj-NC-WX8">
-                    <rect key="frame" x="167" y="418" width="40" height="40"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="40" id="fLm-KW-hp5"/>
-                        <constraint firstAttribute="height" constant="40" id="hQZ-aP-rQv"/>
-                    </constraints>
-                    <state key="normal" image="weix"/>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vFo-13-uJa">
-                    <rect key="frame" x="77" y="418" width="40" height="40"/>
-                    <state key="normal" image="Tencent_QQ"/>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gQ2-oQ-c1I">
-                    <rect key="frame" x="257" y="418" width="40" height="40"/>
-                    <state key="normal" image="weibo"/>
-                </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="第三方登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MsL-o2-4B5">
-                    <rect key="frame" x="150" y="369" width="76.5" height="18"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7RV-jV-PTC">
                     <rect key="frame" x="117.5" y="303" width="140" height="44"/>
                     <color key="backgroundColor" red="0.17254901960784313" green="0.43137254901960786" blue="0.76078431372549016" alpha="1" colorSpace="calibratedRGB"/>
@@ -158,34 +133,24 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Tj0-4e-rfu" firstAttribute="trailing" secondItem="17f-D6-Br1" secondAttribute="trailing" id="1u3-CG-AlI"/>
-                <constraint firstItem="gQ2-oQ-c1I" firstAttribute="centerY" secondItem="vFo-13-uJa" secondAttribute="centerY" id="6S3-XY-tfj"/>
                 <constraint firstItem="zbX-g0-Ndw" firstAttribute="centerY" secondItem="zkz-KX-NPa" secondAttribute="centerY" constant="-3" id="7xl-3f-Sqd"/>
                 <constraint firstItem="1tD-SV-GcU" firstAttribute="top" secondItem="zbX-g0-Ndw" secondAttribute="bottom" constant="5" id="9dQ-D0-lgv"/>
                 <constraint firstItem="uzf-A2-pav" firstAttribute="top" secondItem="Tj0-4e-rfu" secondAttribute="bottom" constant="5" id="BRK-EK-Idf"/>
-                <constraint firstItem="upj-NC-WX8" firstAttribute="height" secondItem="vFo-13-uJa" secondAttribute="height" id="BbR-Xm-3Ab"/>
-                <constraint firstItem="gQ2-oQ-c1I" firstAttribute="height" secondItem="vFo-13-uJa" secondAttribute="height" id="CfL-Xa-Z8e"/>
                 <constraint firstItem="1tD-SV-GcU" firstAttribute="trailing" secondItem="zbX-g0-Ndw" secondAttribute="trailing" id="EKJ-O0-y58"/>
-                <constraint firstItem="upj-NC-WX8" firstAttribute="width" secondItem="vFo-13-uJa" secondAttribute="width" id="Ffq-a2-rtl"/>
                 <constraint firstItem="17f-D6-Br1" firstAttribute="trailing" secondItem="zbX-g0-Ndw" secondAttribute="trailing" id="Fq6-E2-HpX"/>
-                <constraint firstItem="C6t-zz-a3Q" firstAttribute="top" secondItem="MsL-o2-4B5" secondAttribute="bottom" constant="10" id="Gmy-Yr-htp"/>
                 <constraint firstItem="7RV-jV-PTC" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="I7z-Ux-AiW"/>
                 <constraint firstItem="17f-D6-Br1" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="15" id="L0O-hT-6Js"/>
-                <constraint firstItem="gQ2-oQ-c1I" firstAttribute="width" secondItem="vFo-13-uJa" secondAttribute="width" id="LF6-m4-SEi"/>
                 <constraint firstItem="17f-D6-Br1" firstAttribute="centerY" secondItem="6mx-JH-WJn" secondAttribute="centerY" constant="-3" id="Lh6-Dr-1PX"/>
                 <constraint firstItem="17f-D6-Br1" firstAttribute="leading" secondItem="zbX-g0-Ndw" secondAttribute="leading" id="MxV-Im-shu"/>
-                <constraint firstItem="C6t-zz-a3Q" firstAttribute="top" secondItem="7RV-jV-PTC" secondAttribute="bottom" constant="50" id="NfV-pL-AcQ"/>
                 <constraint firstItem="17f-D6-Br1" firstAttribute="top" secondItem="1tD-SV-GcU" secondAttribute="bottom" constant="20" id="OcY-b4-NI3"/>
                 <constraint firstItem="uzf-A2-pav" firstAttribute="trailing" secondItem="Tj0-4e-rfu" secondAttribute="trailing" id="Q6g-Lz-cdD"/>
                 <constraint firstItem="17f-D6-Br1" firstAttribute="leading" secondItem="6mx-JH-WJn" secondAttribute="trailing" constant="5" id="SwV-lK-4rQ"/>
-                <constraint firstItem="upj-NC-WX8" firstAttribute="centerY" secondItem="vFo-13-uJa" secondAttribute="centerY" id="V9j-M1-enN"/>
                 <constraint firstItem="7RV-jV-PTC" firstAttribute="top" secondItem="uzf-A2-pav" secondAttribute="bottom" constant="20" id="VHx-Sy-PhN"/>
-                <constraint firstItem="gQ2-oQ-c1I" firstAttribute="leading" secondItem="upj-NC-WX8" secondAttribute="trailing" constant="50" id="VZU-71-B2e"/>
                 <constraint firstItem="FCb-su-6uG" firstAttribute="centerY" secondItem="17f-D6-Br1" secondAttribute="centerY" id="WFN-hL-gud"/>
                 <constraint firstItem="8YS-ce-DRz" firstAttribute="trailing" secondItem="17f-D6-Br1" secondAttribute="trailing" id="ZRL-Z4-2gA"/>
                 <constraint firstItem="uzf-A2-pav" firstAttribute="leading" secondItem="Tj0-4e-rfu" secondAttribute="leading" id="bEa-R8-Dhl"/>
                 <constraint firstItem="7RV-jV-PTC" firstAttribute="top" secondItem="8YS-ce-DRz" secondAttribute="bottom" constant="20" id="cMj-dT-ZVw"/>
                 <constraint firstAttribute="bottom" secondItem="SGA-HY-CDC" secondAttribute="bottom" id="cRl-1a-2mE"/>
-                <constraint firstAttribute="trailing" secondItem="C6t-zz-a3Q" secondAttribute="trailing" id="eDN-Re-CBw"/>
                 <constraint firstItem="Tj0-4e-rfu" firstAttribute="leading" secondItem="Uuu-4L-P2m" secondAttribute="trailing" constant="5" id="fml-2I-K14"/>
                 <constraint firstItem="SGA-HY-CDC" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="g1N-o6-kMX"/>
                 <constraint firstItem="8YS-ce-DRz" firstAttribute="top" secondItem="17f-D6-Br1" secondAttribute="bottom" constant="5" id="gS7-j6-vuN"/>
@@ -193,17 +158,12 @@
                 <constraint firstItem="FCb-su-6uG" firstAttribute="leading" secondItem="17f-D6-Br1" secondAttribute="trailing" id="ll8-si-dDR"/>
                 <constraint firstItem="SGA-HY-CDC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="mlh-F4-S35"/>
                 <constraint firstItem="Tj0-4e-rfu" firstAttribute="leading" secondItem="17f-D6-Br1" secondAttribute="leading" id="nAm-12-fVC"/>
-                <constraint firstItem="upj-NC-WX8" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ojc-n5-qOC"/>
                 <constraint firstItem="Tj0-4e-rfu" firstAttribute="top" secondItem="8YS-ce-DRz" secondAttribute="bottom" constant="20" id="out-js-BQv"/>
-                <constraint firstItem="upj-NC-WX8" firstAttribute="top" secondItem="C6t-zz-a3Q" secondAttribute="bottom" constant="20" id="p0F-Hn-Ys5"/>
-                <constraint firstItem="upj-NC-WX8" firstAttribute="leading" secondItem="vFo-13-uJa" secondAttribute="trailing" constant="50" id="qU5-Mt-We0"/>
                 <constraint firstItem="8YS-ce-DRz" firstAttribute="leading" secondItem="17f-D6-Br1" secondAttribute="leading" id="sNT-y8-Kyc"/>
-                <constraint firstItem="C6t-zz-a3Q" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="w0f-Bp-nQ3"/>
                 <constraint firstItem="1tD-SV-GcU" firstAttribute="leading" secondItem="zbX-g0-Ndw" secondAttribute="leading" id="wke-zX-5bx"/>
                 <constraint firstAttribute="trailing" secondItem="SGA-HY-CDC" secondAttribute="trailing" id="wvj-Jt-gpw"/>
                 <constraint firstItem="zbX-g0-Ndw" firstAttribute="leading" secondItem="zkz-KX-NPa" secondAttribute="trailing" constant="5" id="xMC-DT-XHF"/>
                 <constraint firstItem="zbX-g0-Ndw" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="135" id="xZF-7Z-qaH"/>
-                <constraint firstItem="MsL-o2-4B5" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="yfb-qe-dos"/>
             </constraints>
             <variation key="default">
                 <mask key="constraints">
@@ -214,12 +174,9 @@
         </view>
     </objects>
     <resources>
-        <image name="Tencent_QQ" width="24" height="29"/>
         <image name="account" width="16" height="16"/>
         <image name="code" width="13" height="27"/>
         <image name="loginbg" width="750" height="1334"/>
         <image name="password" width="15" height="18"/>
-        <image name="weibo" width="29" height="26"/>
-        <image name="weix" width="34" height="28"/>
     </resources>
 </document>
